--- a/frontend/src/app/pages/employee-dashboard/employee-dashboard.component.css
+++ b/frontend/src/app/pages/employee-dashboard/employee-dashboard.component.css
@@ -7,6 +7,14 @@
   font-family: sans-serif;
 }
 
+top-actions {
+  display: flex;
+  justify-content: flex-end;
+  gap: 8px;
+  margin-bottom: 16px;
+}
+
+
 h2 {
   text-align: center;
   margin-bottom: 24px;
@@ -37,4 +45,10 @@ button {
 
 button:hover {
   background-color: #145ca0;
+}
+
+
+.consulta-opcoes {
+  margin-top: 24px;
+  text-align: center;
 }
