--- a/frontend/src/app/pages/autocadastro/autocadastro.component.html
+++ b/frontend/src/app/pages/autocadastro/autocadastro.component.html
@@ -21,10 +21,18 @@
     </div>
 
     <div class="form-group cep-group">
-      <label for="cep">CEP</label>
-      <input id="cep" type="text" formControlName="cep" placeholder="Digite seu CEP" />
-      <button type="button" (click)="consultarCep()">Consultar CEP</button>
-    </div>
+  <label for="cep">CEP</label>
+  <input
+    id="cep"
+    class="cep-input"
+    type="text"
+    formControlName="cep"
+    placeholder="Digite seu CEP"
+    size="10"
+  />
+  <button type="button" (click)="consultarCep()">Consultar CEP</button>
+</div>
+
  <div class="address-title">-- Endereço (preenchido via ViaCEP) --</div>
     <div class="form-group">
       <label for="rua">Rua</label>
