--- a/frontend/src/app/pages/employee-dashboard/modal-cancelar-consulta/modal-cancelar-consulta.component.html
+++ b/frontend/src/app/pages/employee-dashboard/modal-cancelar-consulta/modal-cancelar-consulta.component.html
@@ -1,9 +1,13 @@
-<h2>Cancelar Consulta</h2>
-<p>Especialidade: {{ data.especialidade }}</p>
-<p>Médico: {{ data.medico }}</p>
-<p>Data: {{ data.data }}</p>
-<p>Vagas Ocupadas: {{ data.ocupacao }}</p>
-<div class="actions">
+<h2 mat-dialog-title>Cancelar Consulta</h2>
+
+<mat-dialog-content>
+  <p><strong>Especialidade:</strong> {{ data.especialidade }}</p>
+  <p><strong>Médico:</strong> {{ data.medico }}</p>
+  <p><strong>Data:</strong> {{ data.data }}</p>
+  <p><strong>Vagas Ocupadas:</strong> {{ data.ocupacao }}</p>
+</mat-dialog-content>
+
+<mat-dialog-actions align="end">
   <button mat-button (click)="dialogRef.close(false)">Voltar</button>
   <button mat-raised-button color="warn" (click)="dialogRef.close(true)">Cancelar</button>
-</div>
+</mat-dialog-actions>
