--- a/frontend/src/app/pages/manage-employees/manage-employees.component.css
+++ b/frontend/src/app/pages/manage-employees/manage-employees.component.css
@@ -7,6 +7,13 @@
   font-family: sans-serif;
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
 .form {
   display: grid;
   grid-template-columns: 1fr 1fr;
