--- a/frontend/src/app/pages/manage-employees/manage-employees.component.html
+++ b/frontend/src/app/pages/manage-employees/manage-employees.component.html
@@ -1,5 +1,8 @@
 <div class="manage-employees">
-  <h2>Gerenciar Funcionários</h2>
+  <div class="header">
+    <h2>Gerenciar Funcionários</h2>
+    <button type="button" (click)="voltar()">Voltar</button>
+  </div>
 
   <form [formGroup]="form" (ngSubmit)="criarFuncionario()" class="form">
     <div class="form-group">
@@ -8,7 +11,7 @@
     </div>
     <div class="form-group">
       <label>CPF</label>
-      <input type="text" formControlName="cpf" mask="000.000.000-00">
+      <input type="text" formControlName="cpf">
     </div>
     <div class="form-group">
       <label>E-mail</label>
@@ -16,9 +19,12 @@
     </div>
     <div class="form-group">
       <label>Telefone</label>
-      <input type="text" formControlName="telefone" mask="(00) 00000-0000">
+      <input type="text" formControlName="telefone">
     </div>
     <button type="submit" [disabled]="form.invalid">{{ selectedCpf ? 'Atualizar' : 'Cadastrar' }}</button>
+        <div *ngIf="form.invalid && (form.dirty || form.touched)" class="error">
+      Corrija os campos: {{ invalidFields.join(', ') }}
+    </div>
     <div *ngIf="success" class="success">{{ success }}</div>
     <div *ngIf="error" class="error">{{ error }}</div>
   </form>
