--- a/frontend/src/app/pages/employee-dashboard/employee-dashboard.component.html
+++ b/frontend/src/app/pages/employee-dashboard/employee-dashboard.component.html
@@ -1,4 +1,6 @@
-<div class="employee-dashboard">
+<div class="background"></div>
+<div class="employee-dashboard-page">
+  <div class="employee-dashboard">
   <h2>Bem-vindo(a), {{ nome }}!</h2>
 
   <div class="top-actions">
@@ -71,4 +73,5 @@
       <button (click)="realizarConsulta()">Realizar Consulta</button>
     </div>
   </div>
+</div>
 </div>
