--- a/frontend/src/app/pages/manage-employees/manage-employees.component.html
+++ b/frontend/src/app/pages/manage-employees/manage-employees.component.html
@@ -1,4 +1,6 @@
-<div class="manage-employees">
+<div class="background"></div>
+<div class="manage-employees-page">
+  <div class="manage-employees">
   <div class="header">
     <h2>Gerenciar Funcionários</h2>
     <button type="button" (click)="voltar()">Voltar</button>
@@ -53,4 +55,5 @@
       </tr>
     </tbody>
   </table>
+</div>
 </div>
