--- a/frontend/src/app/pages/create-consultation/create-consultation.component.css
+++ b/frontend/src/app/pages/create-consultation/create-consultation.component.css
@@ -1,9 +1,27 @@
+.background {
+    position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('../../assets/images/fundo.png') center/cover no-repeat;
+  z-index: -1;
+}
+
+.create-consultation-page {
+   position: relative;
+  z-index: 1;
+  min-height: 100vh;
+  
+}
+
 .create-consultation {
   max-width: 600px;
   margin: 40px auto;
   padding: 20px;
   background: #fff;
   border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   font-family: sans-serif;
 }
 
