--- a/frontend/src/app/pages/create-consultation/create-consultation.component.html
+++ b/frontend/src/app/pages/create-consultation/create-consultation.component.html
@@ -1,4 +1,6 @@
-<div class="create-consultation">
+<div class="background"></div>
+<div class="create-consultation-page">
+  <div class="create-consultation">
   <div class="header">
     <h2>Cadastrar Nova Consulta</h2>
     <button type="button" (click)="voltar()">Voltar</button>
@@ -38,4 +40,5 @@
     <div *ngIf="success" class="success">{{ success }}</div>
     <div *ngIf="error" class="error">{{ error }}</div>
   </form>
+</div>
 </div>
