--- a/frontend/src/app/pages/manage-employees/manage-employees.component.css
+++ b/frontend/src/app/pages/manage-employees/manage-employees.component.css
@@ -1,3 +1,20 @@
+.background {
+    position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('../../assets/images/fundo.png') center/cover no-repeat;
+  z-index: -1;
+}
+
+.manage-employees-page {
+   position: relative;
+  z-index: 1;
+  min-height: 100vh;
+  
+}
+
 .manage-employees {
   max-width: 800px;
   margin: 40px auto;
@@ -5,6 +22,7 @@
   background: #fff;
   border-radius: 8px;
   font-family: sans-serif;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
 .header {
