--- a/frontend/src/app/pages/patient-dashboard/patient-dashboard.component.html
+++ b/frontend/src/app/pages/patient-dashboard/patient-dashboard.component.html
@@ -1,4 +1,6 @@
-<div class="patient-dashboard">
+<div class="background"></div>
+<div class="patient-dashboard-page">
+  <div class="patient-dashboard">
   <div class="header">
     <h2>Bem-vindo(a), {{ nome }}! Saldo de Pontos: {{ pontos }} pts</h2>
     <div class="actions">
@@ -58,4 +60,5 @@
       </tr>
     </tbody>
   </table>
+</div>
 </div>
