--- a/frontend/src/app/pages/patient-dashboard/modal-comprar-pontos/modal-comprar-pontos.component.html
+++ b/frontend/src/app/pages/patient-dashboard/modal-comprar-pontos/modal-comprar-pontos.component.html
@@ -1,11 +1,15 @@
-<h2>Comprar Pontos</h2>
-<p>(1 ponto = R$ 5,00)</p>
-<form [formGroup]="form" class="form" (ngSubmit)="confirmar()">
-  <label>Quantidade de Pontos:</label>
-  <input type="number" formControlName="quantidade" />
-  <p>Valor Total: R$ {{ valorTotal }}</p>
-  <div class="actions">
-    <button mat-button type="button" (click)="dialogRef.close()">Cancelar</button>
-    <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Confirmar Compra</button>
-  </div>
-</form>
+<div class="modal">
+  <h2 mat-dialog-title>Comprar Pontos</h2>
+  <form [formGroup]="form" class="form" (ngSubmit)="confirmar()">
+    <mat-dialog-content>
+      <p>(1 ponto = R$ 5,00)</p>
+      <label>Quantidade de Pontos:</label>
+      <input type="number" formControlName="quantidade" />
+      <p>Valor Total: R$ {{ valorTotal }}</p>
+    </mat-dialog-content>
+    <mat-dialog-actions align="end">
+      <button mat-button type="button" (click)="dialogRef.close()">Cancelar</button>
+      <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Confirmar Compra</button>
+    </mat-dialog-actions>
+  </form>
+</div>
