correção do patient_dashboard

--- a/frontend/src/app/pages/schedule-consultation/schedule-consultation.component.css
+++ b/frontend/src/app/pages/schedule-consultation/schedule-consultation.component.css
@@ -51,6 +51,7 @@ button {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  height: 30px;
 }
 
 button:hover {
@@ -60,4 +61,8 @@ button:hover {
 th, td {
   padding: 8px;
   border-bottom: 1px solid #ddd;
+}
+
+.searchbutton {
+  vertical-align: bottom;
 }
