--- a/frontend/src/app/pages/patient-dashboard/modal-cancelar-agendamento/modal-cancelar-agendamento.component.html
+++ b/frontend/src/app/pages/patient-dashboard/modal-cancelar-agendamento/modal-cancelar-agendamento.component.html
@@ -1,7 +1,7 @@
 <div class="modal">
   <h2 mat-dialog-title>Cancelar Agendamento?</h2>
   <mat-dialog-content>
-    <p>Tem certeza que deseja cancelar o agendamento para {{ data.especialidade }} com {{ data.medico }} em {{ data.data }}?</p>
+    <p>Tem certeza que deseja cancelar o agendamento para {{ data.especialidade }} com {{ data.medico }} em {{ data.data | date:'dd/MM/yyyy' }}?</p>
     <p><em>Pontos utilizados serão devolvidos</em></p>
   </mat-dialog-content>
   <mat-dialog-actions align="end">
