--- a/frontend/src/app/pages/patient-dashboard/modal-check-in/modal-check-in.component.html
+++ b/frontend/src/app/pages/patient-dashboard/modal-check-in/modal-check-in.component.html
@@ -1,7 +1,7 @@
 <div class="modal">
   <h2 mat-dialog-title>Confirmar Check-in</h2>
   <mat-dialog-content>
-    <p>Confirma seu check-in para a consulta de {{ data.especialidade }} com {{ data.medico }} em {{ data.data }}?</p>
+    <p>Confirma seu check-in para a consulta de {{ data.especialidade }} com {{ data.medico }} em {{ data.data | date:'dd/MM/yyyy' }}?</p>
     <p><em>Isso indica que você comparecerá</em></p>
   </mat-dialog-content>
   <mat-dialog-actions align="end">
