correção para impedir de cancelar consultas com mais de 50% de ocupação

--- a/frontend/src/app/pages/employee-dashboard/employee-dashboard.component.html
+++ b/frontend/src/app/pages/employee-dashboard/employee-dashboard.component.html
@@ -69,7 +69,7 @@
         {{ consultaSelecionada.vagas - consultaSelecionada.vagasDisponiveis }}/{{ consultaSelecionada.vagas }}
       </p>
 
-      <button (click)="cancelarConsulta()" [disabled]="!podeCancelarConsulta()">Cancelar Consulta</button>
+      <button (click)="cancelarConsulta()">Cancelar Consulta</button>
       <button (click)="realizarConsulta()">Realizar Consulta</button>
     </div>
   </div>
